frontend/src/components/Event/EventModal/eventModal.scss
@use '../../../scss/theme/modal' as *;
@use '../../../scss/abstracts' as *;
@use '../../../scss/layout' as *;

#event-modal {
	.modal-content {
		width: 569px;
	}
	.event-details {
		padding: $modal-inner-padding;
		padding-top: em(15);
		border-bottom: border();

		.event-name {
			@extend %text-truncate !optional;
			width: 350px;
		}
	}

	.event-image {
		width: 195px;
		height: 195px;
	}
}

